lab2/parser.out
Grammar:

Rule 0     S' -> Program
Rule 1     Program -> StatementList
Rule 2     empty -> <empty>
Rule 3     StatementList -> empty
Rule 4     StatementList -> StatementList Statement
Rule 5     Statement -> ExpressionStatement ;
Rule 6     Statement -> AssignmentStatement ;
Rule 7     Statement -> PrintStatement ;
Rule 8     Statement -> JumpStatement ;
Rule 9     Statement -> IterationStatement
Rule 10    Statement -> SelectionStatement
Rule 11    Statement -> CompoundStatement
Rule 12    CompoundStatement -> { StatementList }
Rule 13    ExpressionStatement -> Expression
Rule 14    SelectionStatement -> IF ( Expression ) Statement ELSE Statement
Rule 15    SelectionStatement -> IF ( Expression ) Statement
Rule 16    IterationStatement -> FOR ID ASS List Statement
Rule 17    IterationStatement -> FOR ID ASS Range Statement
Rule 18    IterationStatement -> WHILE ( Expression ) Statement
Rule 19    JumpStatement -> RETURN Expression
Rule 20    JumpStatement -> CONTINUE
Rule 21    JumpStatement -> BREAK
Rule 22    PrintStatement -> PRINT Expression
Rule 23    Expression -> ID
Rule 24    Expression -> Primitive
Rule 25    Expression -> Matrix
Rule 26    Expression -> Expression BinaryOperator Expression
Rule 27    Expression -> Expression ComparisonOperator Expression
Rule 28    MatrixAccess -> [ MatrixAccessRange , MatrixAccessRange ]
Rule 29    MatrixAccess -> empty
Rule 30    MatrixAccessRange -> MatrixAccessRangeElement
Rule 31    MatrixAccessRange -> MatrixAccessRangeElement : MatrixAccessRangeElement
Rule 32    MatrixAccessRangeElement -> ID
Rule 33    MatrixAccessRangeElement -> INT
Rule 34    Range -> RangeElement : RangeElement : RangeElement
Rule 35    Range -> RangeElement : RangeElement
Rule 36    RangeElement -> ID
Rule 37    RangeElement -> Number
Rule 38    List -> [ ListContent ]
Rule 39    ListContent -> empty
Rule 40    ListContent -> ListEl , ListContent
Rule 41    ListEl -> List
Rule 42    ListEl -> Primitive
Rule 43    ListEl -> ID
Rule 44    Primitive -> STRING
Rule 45    Primitive -> Number
Rule 46    Matrix -> [ MatrixRowList ]
Rule 47    Matrix -> EYE ( INT )
Rule 48    Matrix -> ONES ( INT )
Rule 49    Matrix -> ZEROS ( INT )
Rule 50    MatrixRowList -> empty
Rule 51    MatrixRowList -> [ MatrixRow ] , MatrixRowList
Rule 52    MatrixRow -> empty
Rule 53    MatrixRow -> Number , MatrixRow
Rule 54    BinaryOperator -> DIV_EL
Rule 55    BinaryOperator -> MUL_EL
Rule 56    BinaryOperator -> SUB_EL
Rule 57    BinaryOperator -> ADD_EL
Rule 58    BinaryOperator -> DIV
Rule 59    BinaryOperator -> MUL
Rule 60    BinaryOperator -> SUB
Rule 61    BinaryOperator -> ADD
Rule 62    AssignmentStatement -> ID MatrixAccess AssignmentOperator Expression
Rule 63    AssignmentStatement -> ID AssignmentOperator Expression
Rule 64    AssignmentOperator -> ASS_MUL
Rule 65    AssignmentOperator -> ASS_DIV
Rule 66    AssignmentOperator -> ASS_SUB
Rule 67    AssignmentOperator -> ASS_ADD
Rule 68    AssignmentOperator -> ASS
Rule 69    PrefixUnaryOperator -> empty
Rule 70    PrefixUnaryOperator -> SUB
Rule 71    PostfixUnaryOperator -> empty
Rule 72    PostfixUnaryOperator -> MAT_TRANS
Rule 73    Number -> FLOAT
Rule 74    Number -> INT
Rule 75    ComparisonOperator -> LESS
Rule 76    ComparisonOperator -> GREATER
Rule 77    ComparisonOperator -> NOT_EQ
Rule 78    ComparisonOperator -> GREATER_EQ
Rule 79    ComparisonOperator -> LESS_EQ
Rule 80    ComparisonOperator -> EQ

Terminals, with rules where they appear:

(                    : 14 15 18 47 48 49
)                    : 14 15 18 47 48 49
,                    : 28 40 51 53
:                    : 31 34 34 35
;                    : 5 6 7 8
ADD                  : 61
ADD_EL               : 57
ASS                  : 16 17 68
ASS_ADD              : 67
ASS_DIV              : 65
ASS_MUL              : 64
ASS_SUB              : 66
BREAK                : 21
CONTINUE             : 20
DIV                  : 58
DIV_EL               : 54
ELSE                 : 14
EQ                   : 80
EYE                  : 47
FLOAT                : 73
FOR                  : 16 17
GREATER              : 76
GREATER_EQ           : 78
ID                   : 16 17 23 32 36 43 62 63
IF                   : 14 15
INT                  : 33 47 48 49 74
LESS                 : 75
LESS_EQ              : 79
MAT_TRANS            : 72
MUL                  : 59
MUL_EL               : 55
NOT_EQ               : 77
ONES                 : 48
PRINT                : 22
RETURN               : 19
STRING               : 44
SUB                  : 60 70
SUB_EL               : 56
WHILE                : 18
ZEROS                : 49
[                    : 28 38 46 51
]                    : 28 38 46 51
error                : 
{                    : 12
}                    : 12

Nonterminals, with rules where they appear:

AssignmentOperator   : 62 63
AssignmentStatement  : 6
BinaryOperator       : 26
ComparisonOperator   : 27
CompoundStatement    : 11
Expression           : 13 14 15 18 19 22 26 26 27 27 62 63
ExpressionStatement  : 5
IterationStatement   : 9
JumpStatement        : 8
List                 : 16 41
ListContent          : 38 40
ListEl               : 40
Matrix               : 25
MatrixAccess         : 62
MatrixAccessRange    : 28 28
MatrixAccessRangeElement : 30 31 31
MatrixRow            : 51 53
MatrixRowList        : 46 51
Number               : 37 45 53
PostfixUnaryOperator : 
PrefixUnaryOperator  : 
Primitive            : 24 42
PrintStatement       : 7
Program              : 0
Range                : 17
RangeElement         : 34 34 34 35 35
SelectionStatement   : 10
Statement            : 4 14 14 15 16 17 18
StatementList        : 1 4 12
empty                : 3 29 39 50 52 69 71


state 0

    (0) S' -> . Program
    (1) Program -> . StatementList
    (3) StatementList -> . empty
    (4) StatementList -> . StatementList Statement
    (2) empty -> .
    ID              reduce using rule 2 (empty -> .)
    PRINT           reduce using rule 2 (empty -> .)
    RETURN          reduce using rule 2 (empty -> .)
    CONTINUE        reduce using rule 2 (empty -> .)
    BREAK           reduce using rule 2 (empty -> .)
    FOR             reduce using rule 2 (empty -> .)
    WHILE           reduce using rule 2 (empty -> .)
    IF              reduce using rule 2 (empty -> .)
    {               reduce using rule 2 (empty -> .)
    STRING          reduce using rule 2 (empty -> .)
    [               reduce using rule 2 (empty -> .)
    EYE             reduce using rule 2 (empty -> .)
    ONES            reduce using rule 2 (empty -> .)
    ZEROS           reduce using rule 2 (empty -> .)
    FLOAT           reduce using rule 2 (empty -> .)
    INT             reduce using rule 2 (empty -> .)
    $end            reduce using rule 2 (empty -> .)

    Program                        shift and go to state 1
    StatementList                  shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> Program .


state 2

    (1) Program -> StatementList .
    (4) StatementList -> StatementList . Statement
    (5) Statement -> . ExpressionStatement ;
    (6) Statement -> . AssignmentStatement ;
    (7) Statement -> . PrintStatement ;
    (8) Statement -> . JumpStatement ;
    (9) Statement -> . IterationStatement
    (10) Statement -> . SelectionStatement
    (11) Statement -> . CompoundStatement
    (13) ExpressionStatement -> . Expression
    (62) AssignmentStatement -> . ID MatrixAccess AssignmentOperator Expression
    (63) AssignmentStatement -> . ID AssignmentOperator Expression
    (22) PrintStatement -> . PRINT Expression
    (19) JumpStatement -> . RETURN Expression
    (20) JumpStatement -> . CONTINUE
    (21) JumpStatement -> . BREAK
    (16) IterationStatement -> . FOR ID ASS List Statement
    (17) IterationStatement -> . FOR ID ASS Range Statement
    (18) IterationStatement -> . WHILE ( Expression ) Statement
    (14) SelectionStatement -> . IF ( Expression ) Statement ELSE Statement
    (15) SelectionStatement -> . IF ( Expression ) Statement
    (12) CompoundStatement -> . { StatementList }
    (23) Expression -> . ID
    (24) Expression -> . Primitive
    (25) Expression -> . Matrix
    (26) Expression -> . Expression BinaryOperator Expression
    (27) Expression -> . Expression ComparisonOperator Expression
    (44) Primitive -> . STRING
    (45) Primitive -> . Number
    (46) Matrix -> . [ MatrixRowList ]
    (47) Matrix -> . EYE ( INT )
    (48) Matrix -> . ONES ( INT )
    (49) Matrix -> . ZEROS ( INT )
    (73) Number -> . FLOAT
    (74) Number -> . INT
    $end            reduce using rule 1 (Program -> StatementList .)
    ID              shift and go to state 13
    PRINT           shift and go to state 14
    RETURN          shift and go to state 15
    CONTINUE        shift and go to state 16
    BREAK           shift and go to state 17
    FOR             shift and go to state 18
    WHILE           shift and go to state 19
    IF              shift and go to state 20
    {               shift and go to state 21
    STRING          shift and go to state 24
    [               shift and go to state 26
    EYE             shift and go to state 27
    ONES            shift and go to state 29
    ZEROS           shift and go to state 30
    FLOAT           shift and go to state 31
    INT             shift and go to state 28

    Statement                      shift and go to state 4
    ExpressionStatement            shift and go to state 5
    AssignmentStatement            shift and go to state 6
    PrintStatement                 shift and go to state 7
    JumpStatement                  shift and go to state 8
    IterationStatement             shift and go to state 9
    SelectionStatement             shift and go to state 10
    CompoundStatement              shift and go to state 11
    Expression                     shift and go to state 12
    Primitive                      shift and go to state 22
    Matrix                         shift and go to state 23
    Number                         shift and go to state 25

state 3

    (3) StatementList -> empty .
    ID              reduce using rule 3 (StatementList -> empty .)
    PRINT           reduce using rule 3 (StatementList -> empty .)
    RETURN          reduce using rule 3 (StatementList -> empty .)
    CONTINUE        reduce using rule 3 (StatementList -> empty .)
    BREAK           reduce using rule 3 (StatementList -> empty .)
    FOR             reduce using rule 3 (StatementList -> empty .)
    WHILE           reduce using rule 3 (StatementList -> empty .)
    IF              reduce using rule 3 (StatementList -> empty .)
    {               reduce using rule 3 (StatementList -> empty .)
    STRING          reduce using rule 3 (StatementList -> empty .)
    [               reduce using rule 3 (StatementList -> empty .)
    EYE             reduce using rule 3 (StatementList -> empty .)
    ONES            reduce using rule 3 (StatementList -> empty .)
    ZEROS           reduce using rule 3 (StatementList -> empty .)
    FLOAT           reduce using rule 3 (StatementList -> empty .)
    INT             reduce using rule 3 (StatementList -> empty .)
    $end            reduce using rule 3 (StatementList -> empty .)
    }               reduce using rule 3 (StatementList -> empty .)


state 4

    (4) StatementList -> StatementList Statement .
    ID              reduce using rule 4 (StatementList -> StatementList Statement .)
    PRINT           reduce using rule 4 (StatementList -> StatementList Statement .)
    RETURN          reduce using rule 4 (StatementList -> StatementList Statement .)
    CONTINUE        reduce using rule 4 (StatementList -> StatementList Statement .)
    BREAK           reduce using rule 4 (StatementList -> StatementList Statement .)
    FOR             reduce using rule 4 (StatementList -> StatementList Statement .)
    WHILE           reduce using rule 4 (StatementList -> StatementList Statement .)
    IF              reduce using rule 4 (StatementList -> StatementList Statement .)
    {               reduce using rule 4 (StatementList -> StatementList Statement .)
    STRING          reduce using rule 4 (StatementList -> StatementList Statement .)
    [               reduce using rule 4 (StatementList -> StatementList Statement .)
    EYE             reduce using rule 4 (StatementList -> StatementList Statement .)
    ONES            reduce using rule 4 (StatementList -> StatementList Statement .)
    ZEROS           reduce using rule 4 (StatementList -> StatementList Statement .)
    FLOAT           reduce using rule 4 (StatementList -> StatementList Statement .)
    INT             reduce using rule 4 (StatementList -> StatementList Statement .)
    $end            reduce using rule 4 (StatementList -> StatementList Statement .)
    }               reduce using rule 4 (StatementList -> StatementList Statement .)


state 5

    (5) Statement -> ExpressionStatement . ;
    ;               shift and go to state 32


state 6

    (6) Statement -> AssignmentStatement . ;
    ;               shift and go to state 33


state 7

    (7) Statement -> PrintStatement . ;
    ;               shift and go to state 34


state 8

    (8) Statement -> JumpStatement . ;
    ;               shift and go to state 35


state 9

    (9) Statement -> IterationStatement .
    ID              reduce using rule 9 (Statement -> IterationStatement .)
    PRINT           reduce using rule 9 (Statement -> IterationStatement .)
    RETURN          reduce using rule 9 (Statement -> IterationStatement .)
    CONTINUE        reduce using rule 9 (Statement -> IterationStatement .)
    BREAK           reduce using rule 9 (Statement -> IterationStatement .)
    FOR             reduce using rule 9 (Statement -> IterationStatement .)
    WHILE           reduce using rule 9 (Statement -> IterationStatement .)
    IF              reduce using rule 9 (Statement -> IterationStatement .)
    {               reduce using rule 9 (Statement -> IterationStatement .)
    STRING          reduce using rule 9 (Statement -> IterationStatement .)
    [               reduce using rule 9 (Statement -> IterationStatement .)
    EYE             reduce using rule 9 (Statement -> IterationStatement .)
    ONES            reduce using rule 9 (Statement -> IterationStatement .)
    ZEROS           reduce using rule 9 (Statement -> IterationStatement .)
    FLOAT           reduce using rule 9 (Statement -> IterationStatement .)
    INT             reduce using rule 9 (Statement -> IterationStatement .)
    $end            reduce using rule 9 (Statement -> IterationStatement .)
    }               reduce using rule 9 (Statement -> IterationStatement .)
    ELSE            reduce using rule 9 (Statement -> IterationStatement .)


state 10

    (10) Statement -> SelectionStatement .
    ID              reduce using rule 10 (Statement -> SelectionStatement .)
    PRINT           reduce using rule 10 (Statement -> SelectionStatement .)
    RETURN          reduce using rule 10 (Statement -> SelectionStatement .)
    CONTINUE        reduce using rule 10 (Statement -> SelectionStatement .)
    BREAK           reduce using rule 10 (Statement -> SelectionStatement .)
    FOR             reduce using rule 10 (Statement -> SelectionStatement .)
    WHILE           reduce using rule 10 (Statement -> SelectionStatement .)
    IF              reduce using rule 10 (Statement -> SelectionStatement .)
    {               reduce using rule 10 (Statement -> SelectionStatement .)
    STRING          reduce using rule 10 (Statement -> SelectionStatement .)
    [               reduce using rule 10 (Statement -> SelectionStatement .)
    EYE             reduce using rule 10 (Statement -> SelectionStatement .)
    ONES            reduce using rule 10 (Statement -> SelectionStatement .)
    ZEROS           reduce using rule 10 (Statement -> SelectionStatement .)
    FLOAT           reduce using rule 10 (Statement -> SelectionStatement .)
    INT             reduce using rule 10 (Statement -> SelectionStatement .)
    $end            reduce using rule 10 (Statement -> SelectionStatement .)
    }               reduce using rule 10 (Statement -> SelectionStatement .)
    ELSE            reduce using rule 10 (Statement -> SelectionStatement .)


state 11

    (11) Statement -> CompoundStatement .
    ID              reduce using rule 11 (Statement -> CompoundStatement .)
    PRINT           reduce using rule 11 (Statement -> CompoundStatement .)
    RETURN          reduce using rule 11 (Statement -> CompoundStatement .)
    CONTINUE        reduce using rule 11 (Statement -> CompoundStatement .)
    BREAK           reduce using rule 11 (Statement -> CompoundStatement .)
    FOR             reduce using rule 11 (Statement -> CompoundStatement .)
    WHILE           reduce using rule 11 (Statement -> CompoundStatement .)
    IF              reduce using rule 11 (Statement -> CompoundStatement .)
    {               reduce using rule 11 (Statement -> CompoundStatement .)
    STRING          reduce using rule 11 (Statement -> CompoundStatement .)
    [               reduce using rule 11 (Statement -> CompoundStatement .)
    EYE             reduce using rule 11 (Statement -> CompoundStatement .)
    ONES            reduce using rule 11 (Statement -> CompoundStatement .)
    ZEROS           reduce using rule 11 (Statement -> CompoundStatement .)
    FLOAT           reduce using rule 11 (Statement -> CompoundStatement .)
    INT             reduce using rule 11 (Statement -> CompoundStatement .)
    $end            reduce using rule 11 (Statement -> CompoundStatement .)
    }               reduce using rule 11 (Statement -> CompoundStatement .)
    ELSE            reduce using rule 11 (Statement -> CompoundStatement .)


state 12

    (13) ExpressionStatement -> Expression .
    (26) Expression -> Expression . BinaryOperator Expression
    (27) Expression -> Expression . ComparisonOperator Expression
    (54) BinaryOperator -> . DIV_EL
    (55) BinaryOperator -> . MUL_EL
    (56) BinaryOperator -> . SUB_EL
    (57) BinaryOperator -> . ADD_EL
    (58) BinaryOperator -> . DIV
    (59) BinaryOperator -> . MUL
    (60) BinaryOperator -> . SUB
    (61) BinaryOperator -> . ADD
    (75) ComparisonOperator -> . LESS
    (76) ComparisonOperator -> . GREATER
    (77) ComparisonOperator -> . NOT_EQ
    (78) ComparisonOperator -> . GREATER_EQ
    (79) ComparisonOperator -> . LESS_EQ
    (80) ComparisonOperator -> . EQ
    ;               reduce using rule 13 (ExpressionStatement -> Expression .)
    DIV_EL          shift and go to state 38
    MUL_EL          shift and go to state 39
    SUB_EL          shift and go to state 40
    ADD_EL          shift and go to state 41
    DIV             shift and go to state 42
    MUL             shift and go to state 43
    SUB             shift and go to state 44
    ADD             shift and go to state 45
    LESS            shift and go to state 46
    GREATER         shift and go to state 47
    NOT_EQ          shift and go to state 48
    GREATER_EQ      shift and go to state 49
    LESS_EQ         shift and go to state 50
    EQ              shift and go to state 51

    BinaryOperator                 shift and go to state 36
    ComparisonOperator             shift and go to state 37

state 13

    (62) AssignmentStatement -> ID . MatrixAccess AssignmentOperator Expression
    (63) AssignmentStatement -> ID . AssignmentOperator Expression
    (23) Expression -> ID .
    (28) MatrixAccess -> . [ MatrixAccessRange , MatrixAccessRange ]
    (29) MatrixAccess -> . empty
    (64) AssignmentOperator -> . ASS_MUL
    (65) AssignmentOperator -> . ASS_DIV
    (66) AssignmentOperator -> . ASS_SUB
    (67) AssignmentOperator -> . ASS_ADD
    (68) AssignmentOperator -> . ASS
    (2) empty -> .
  ! shift/reduce conflict for ASS_MUL resolved as shift
  ! shift/reduce conflict for ASS_DIV resolved as shift
  ! shift/reduce conflict for ASS_SUB resolved as shift
  ! shift/reduce conflict for ASS_ADD resolved as shift
  ! shift/reduce conflict for ASS resolved as shift
    DIV_EL          reduce using rule 23 (Expression -> ID .)
    MUL_EL          reduce using rule 23 (Expression -> ID .)
    SUB_EL          reduce using rule 23 (Expression -> ID .)
    ADD_EL          reduce using rule 23 (Expression -> ID .)
    DIV             reduce using rule 23 (Expression -> ID .)
    MUL             reduce using rule 23 (Expression -> ID .)
    SUB             reduce using rule 23 (Expression -> ID .)
    ADD             reduce using rule 23 (Expression -> ID .)
    LESS            reduce using rule 23 (Expression -> ID .)
    GREATER         reduce using rule 23 (Expression -> ID .)
    NOT_EQ          reduce using rule 23 (Expression -> ID .)
    GREATER_EQ      reduce using rule 23 (Expression -> ID .)
    LESS_EQ         reduce using rule 23 (Expression -> ID .)
    EQ              reduce using rule 23 (Expression -> ID .)
    ;               reduce using rule 23 (Expression -> ID .)
    [               shift and go to state 54
    ASS_MUL         shift and go to state 56
    ASS_DIV         shift and go to state 57
    ASS_SUB         shift and go to state 58
    ASS_ADD         shift and go to state 59
    ASS             shift and go to state 60

    MatrixAccess                   shift and go to state 52
    AssignmentOperator             shift and go to state 53
    empty                          shift and go to state 55

state 14

    (22) PrintStatement -> PRINT . Expression
    (23) Expression -> . ID
    (24) Expression -> . Primitive
    (25) Expression -> . Matrix
    (26) Expression -> . Expression BinaryOperator Expression
    (27) Expression -> . Expression ComparisonOperator Expression
    (44) Primitive -> . STRING
    (45) Primitive -> . Number
    (46) Matrix -> . [ MatrixRowList ]
    (47) Matrix -> . EYE ( INT )
    (48) Matrix -> . ONES ( INT )
    (49) Matrix -> . ZEROS ( INT )
    (73) Number -> . FLOAT
    (74) Number -> . INT
    ID              shift and go to state 62
    STRING          shift and go to state 24
    [               shift and go to state 26
    EYE             shift and go to state 27
    ONES            shift and go to state 29
    ZEROS           shift and go to state 30
    FLOAT           shift and go to state 31
    INT             shift and go to state 28

    Expression                     shift and go to state 61
    Primitive                      shift and go to state 22
    Matrix                         shift and go to state 23
    Number                         shift and go to state 25

state 15

    (19) JumpStatement -> RETURN . Expression
    (23) Expression -> . ID
    (24) Expression -> . Primitive
    (25) Expression -> . Matrix
    (26) Expression -> . Expression BinaryOperator Expression
    (27) Expression -> . Expression ComparisonOperator Expression
    (44) Primitive -> . STRING
    (45) Primitive -> . Number
    (46) Matrix -> . [ MatrixRowList ]
    (47) Matrix -> . EYE ( INT )
    (48) Matrix -> . ONES ( INT )
    (49) Matrix -> . ZEROS ( INT )
    (73) Number -> . FLOAT
    (74) Number -> . INT
    ID              shift and go to state 62
    STRING          shift and go to state 24
    [               shift and go to state 26
    EYE             shift and go to state 27
    ONES            shift and go to state 29
    ZEROS           shift and go to state 30
    FLOAT           shift and go to state 31
    INT             shift and go to state 28

    Expression                     shift and go to state 63
    Primitive                      shift and go to state 22
    Matrix                         shift and go to state 23
    Number                         shift and go to state 25

state 16

    (20) JumpStatement -> CONTINUE .
    ;               reduce using rule 20 (JumpStatement -> CONTINUE .)


state 17

    (21) JumpStatement -> BREAK .
    ;               reduce using rule 21 (JumpStatement -> BREAK .)


state 18

    (16) IterationStatement -> FOR . ID ASS List Statement
    (17) IterationStatement -> FOR . ID ASS Range Statement
    ID              shift and go to state 64


state 19

    (18) IterationStatement -> WHILE . ( Expression ) Statement
    (               shift and go to state 65


state 20

    (14) SelectionStatement -> IF . ( Expression ) Statement ELSE Statement
    (15) SelectionStatement -> IF . ( Expression ) Statement
    (               shift and go to state 66


state 21

    (12) CompoundStatement -> { . StatementList }
    (3) StatementList -> . empty
    (4) StatementList -> . StatementList Statement
    (2) empty -> .
    }               reduce using rule 2 (empty -> .)
    ID              reduce using rule 2 (empty -> .)
    PRINT           reduce using rule 2 (empty -> .)
    RETURN          reduce using rule 2 (empty -> .)
    CONTINUE        reduce using rule 2 (empty -> .)
    BREAK           reduce using rule 2 (empty -> .)
    FOR             reduce using rule 2 (empty -> .)
    WHILE           reduce using rule 2 (empty -> .)
    IF              reduce using rule 2 (empty -> .)
    {               reduce using rule 2 (empty -> .)
    STRING          reduce using rule 2 (empty -> .)
    [               reduce using rule 2 (empty -> .)
    EYE             reduce using rule 2 (empty -> .)
    ONES            reduce using rule 2 (empty -> .)
    ZEROS           reduce using rule 2 (empty -> .)
    FLOAT           reduce using rule 2 (empty -> .)
    INT             reduce using rule 2 (empty -> .)

    StatementList                  shift and go to state 67
    empty                          shift and go to state 3

state 22

    (24) Expression -> Primitive .
    DIV_EL          reduce using rule 24 (Expression -> Primitive .)
    MUL_EL          reduce using rule 24 (Expression -> Primitive .)
    SUB_EL          reduce using rule 24 (Expression -> Primitive .)
    ADD_EL          reduce using rule 24 (Expression -> Primitive .)
    DIV             reduce using rule 24 (Expression -> Primitive .)
    MUL             reduce using rule 24 (Expression -> Primitive .)
    SUB             reduce using rule 24 (Expression -> Primitive .)
    ADD             reduce using rule 24 (Expression -> Primitive .)
    LESS            reduce using rule 24 (Expression -> Primitive .)
    GREATER         reduce using rule 24 (Expression -> Primitive .)
    NOT_EQ          reduce using rule 24 (Expression -> Primitive .)
    GREATER_EQ      reduce using rule 24 (Expression -> Primitive .)
    LESS_EQ         reduce using rule 24 (Expression -> Primitive .)
    EQ              reduce using rule 24 (Expression -> Primitive .)
    ;               reduce using rule 24 (Expression -> Primitive .)
    )               reduce using rule 24 (Expression -> Primitive .)


state 23

    (25) Expression -> Matrix .
    DIV_EL          reduce using rule 25 (Expression -> Matrix .)
    MUL_EL          reduce using rule 25 (Expression -> Matrix .)
    SUB_EL          reduce using rule 25 (Expression -> Matrix .)
    ADD_EL          reduce using rule 25 (Expression -> Matrix .)
    DIV             reduce using rule 25 (Expression -> Matrix .)
    MUL             reduce using rule 25 (Expression -> Matrix .)
    SUB             reduce using rule 25 (Expression -> Matrix .)
    ADD             reduce using rule 25 (Expression -> Matrix .)
    LESS            reduce using rule 25 (Expression -> Matrix .)
    GREATER         reduce using rule 25 (Expression -> Matrix .)
    NOT_EQ          reduce using rule 25 (Expression -> Matrix .)
    GREATER_EQ      reduce using rule 25 (Expression -> Matrix .)
    LESS_EQ         reduce using rule 25 (Expression -> Matrix .)
    EQ              reduce using rule 25 (Expression -> Matrix .)
    ;               reduce using rule 25 (Expression -> Matrix .)
    )               reduce using rule 25 (Expression -> Matrix .)


state 24

    (44) Primitive -> STRING .
    DIV_EL          reduce using rule 44 (Primitive -> STRING .)
    MUL_EL          reduce using rule 44 (Primitive -> STRING .)
    SUB_EL          reduce using rule 44 (Primitive -> STRING .)
    ADD_EL          reduce using rule 44 (Primitive -> STRING .)
    DIV             reduce using rule 44 (Primitive -> STRING .)
    MUL             reduce using rule 44 (Primitive -> STRING .)
    SUB             reduce using rule 44 (Primitive -> STRING .)
    ADD             reduce using rule 44 (Primitive -> STRING .)
    LESS            reduce using rule 44 (Primitive -> STRING .)
    GREATER         reduce using rule 44 (Primitive -> STRING .)
    NOT_EQ          reduce using rule 44 (Primitive -> STRING .)
    GREATER_EQ      reduce using rule 44 (Primitive -> STRING .)
    LESS_EQ         reduce using rule 44 (Primitive -> STRING .)
    EQ              reduce using rule 44 (Primitive -> STRING .)
    ;               reduce using rule 44 (Primitive -> STRING .)
    )               reduce using rule 44 (Primitive -> STRING .)
    ,               reduce using rule 44 (Primitive -> STRING .)


state 25

    (45) Primitive -> Number .
    DIV_EL          reduce using rule 45 (Primitive -> Number .)
    MUL_EL          reduce using rule 45 (Primitive -> Number .)
    SUB_EL          reduce using rule 45 (Primitive -> Number .)
    ADD_EL          reduce using rule 45 (Primitive -> Number .)
    DIV             reduce using rule 45 (Primitive -> Number .)
    MUL             reduce using rule 45 (Primitive -> Number .)
    SUB             reduce using rule 45 (Primitive -> Number .)
    ADD             reduce using rule 45 (Primitive -> Number .)
    LESS            reduce using rule 45 (Primitive -> Number .)
    GREATER         reduce using rule 45 (Primitive -> Number .)
    NOT_EQ          reduce using rule 45 (Primitive -> Number .)
    GREATER_EQ      reduce using rule 45 (Primitive -> Number .)
    LESS_EQ         reduce using rule 45 (Primitive -> Number .)
    EQ              reduce using rule 45 (Primitive -> Number .)
    ;               reduce using rule 45 (Primitive -> Number .)
    )               reduce using rule 45 (Primitive -> Number .)
    ,               reduce using rule 45 (Primitive -> Number .)


state 26

    (46) Matrix -> [ . MatrixRowList ]
    (50) MatrixRowList -> . empty
    (51) MatrixRowList -> . [ MatrixRow ] , MatrixRowList
    (2) empty -> .
    [               shift and go to state 68
    ]               reduce using rule 2 (empty -> .)

    MatrixRowList                  shift and go to state 69
    empty                          shift and go to state 70

state 27

    (47) Matrix -> EYE . ( INT )
    (               shift and go to state 71


state 28

    (74) Number -> INT .
    DIV_EL          reduce using rule 74 (Number -> INT .)
    MUL_EL          reduce using rule 74 (Number -> INT .)
    SUB_EL          reduce using rule 74 (Number -> INT .)
    ADD_EL          reduce using rule 74 (Number -> INT .)
    DIV             reduce using rule 74 (Number -> INT .)
    MUL             reduce using rule 74 (Number -> INT .)
    SUB             reduce using rule 74 (Number -> INT .)
    ADD             reduce using rule 74 (Number -> INT .)
    LESS            reduce using rule 74 (Number -> INT .)
    GREATER         reduce using rule 74 (Number -> INT .)
    NOT_EQ          reduce using rule 74 (Number -> INT .)
    GREATER_EQ      reduce using rule 74 (Number -> INT .)
    LESS_EQ         reduce using rule 74 (Number -> INT .)
    EQ              reduce using rule 74 (Number -> INT .)
    ;               reduce using rule 74 (Number -> INT .)
    )               reduce using rule 74 (Number -> INT .)
    ,               reduce using rule 74 (Number -> INT .)
    :               reduce using rule 74 (Number -> INT .)
    ID              reduce using rule 74 (Number -> INT .)
    PRINT           reduce using rule 74 (Number -> INT .)
    RETURN          reduce using rule 74 (Number -> INT .)
    CONTINUE        reduce using rule 74 (Number -> INT .)
    BREAK           reduce using rule 74 (Number -> INT .)
    FOR             reduce using rule 74 (Number -> INT .)
    WHILE           reduce using rule 74 (Number -> INT .)
    IF              reduce using rule 74 (Number -> INT .)
    {               reduce using rule 74 (Number -> INT .)
    STRING          reduce using rule 74 (Number -> INT .)
    [               reduce using rule 74 (Number -> INT .)
    EYE             reduce using rule 74 (Number -> INT .)
    ONES            reduce using rule 74 (Number -> INT .)
    ZEROS           reduce using rule 74 (Number -> INT .)
    FLOAT           reduce using rule 74 (Number -> INT .)
    INT             reduce using rule 74 (Number -> INT .)


state 29

    (48) Matrix -> ONES . ( INT )
    (               shift and go to state 72


state 30

    (49) Matrix -> ZEROS . ( INT )
    (               shift and go to state 73


state 31
